[gd_scene load_steps=2 format=3 uid="uid://c2msteevawecd"]

[ext_resource type="Script" path="res://HUD.gd" id="1_nx4u4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_nx4u4")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -67.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "0"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -75.0
offset_right = 121.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Start!"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
